Se modificó la ruta del index.html para poder ejecutarlo

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Fuentes-->
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Oswald:wght@300;400;700&family=Roboto&display=swap" rel="stylesheet">
     <!--Estilo CSS-->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!--Titulo de la pagina-->
     <title>Reloj Digital</title>
 </head>
@@ -36,5 +36,5 @@
     </div>
 </body>
 <!--JavaScript-->
-<script src="../js/reloj.js"></script>
+<script src="js/reloj.js"></script>
 </html>
